[project]
name = "mlargparser"
version = "1.1"
authors = [
  { name="Jared Sutton", email="jpsutton@gmail.com" },
]
description = "A multi-Level argument parser library for writing CLI-based applications"
readme = "README.md"
license = "LGPL-2.0"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# Explicit modules: avoid "multiple top-level modules" error with flat layout
[tool.setuptools]
py-modules = ["mlargparser", "mlargparser_argcomplete"]

[project.optional-dependencies]
argcomplete = ["argcomplete"]

[project.urls]
"Homepage" = "https://github.com/jpsutton/mlargparser"
"Bug Tracker" = "https://github.com/jpsutton/mlargparser/issues"
